fixed some label alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,6 +81,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     .courses {
         margin-bottom: 200px;
     }
+
+    .btn-class-picker {
+        border: 0;
+        padding: 0;
+        background-color: transparent;
+    }
 }
 
 .max {
